--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jest": "^29.6.2"
   },
   "dependencies": {
+    "color-name-list": "^10.10.0",
     "fs": "^0.0.1-security",
     "inquirer": "^8.2.4"
   }
